<resources>
    <string name="app_name">Final Project</string>
    <string name="nick">Enter your nickname</string>
    <string name="password">Enter your password</string>
    <string name="login">Sign in</string>
    <string name="reg">Sign up</string>
    <string name="nreg">Not registered?</string>
    <string name="job">What I do</string>
    <string name="action_button_description">Shows user list view</string>
    <string name="search_hint_text">🔍 Search</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="name">name</string>
    <string name="position">position</string>
    <string name="message">Message</string>
    <string name="back_button">back button</string>
    <string name="t">Test</string>
    <string name="t_name">Sanjida Akter</string>
</resources>