<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin.SignInActivity">

    <EditText
        android:id="@+id/nickname"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/edittext_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/light"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/nick">
    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/login"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/text_margin">
    </EditText>
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/signin"
        android:onClick="onLoginClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="@dimen/sign_in_margin">
    </Button>

    <Button
        android:id="@+id/register"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sign_up_margin"
        android:backgroundTint="@color/white"
        android:onClick="onRegisterClick"
        android:text="@string/reg"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black" />
    <TextView
        android:id="@+id/not_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nreg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register"
        android:layout_marginBottom="@dimen/text_margin">
    </TextView>
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_dimen"
        android:layout_height="@dimen/avatar_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nickname"
        android:layout_marginBottom="@dimen/avatar_margin"
        android:src="@drawable/avatar_image_placeholder">
    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>