<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/chat_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/z"
        app:layout_constraintBottom_toTopOf="@id/relativechat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/collapsedColor"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/collapsing_height">

                    <ImageButton
                        android:id="@+id/back_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/img_marg"
                        android:layout_marginTop="@dimen/img_marg"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/back_button"
                        android:onClick="onBack"
                        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />


                    <TextView
                        android:id="@+id/toolbarname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/tb_top"
                        android:layout_marginTop="@dimen/tb_bot"
                        tools:text="@string/t_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tb_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/toolbarposition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tb_top"
                        tools:text="@string/t"
                        android:textColor="@color/light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/toolbarname" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/chat_profile_pic"
                        android:layout_width="@dimen/tb_av"
                        android:layout_height="@dimen/tb_av"
                        android:layout_marginEnd="@dimen/text_margin"
                        android:src="@drawable/avatar_image_placeholder"
                        app:civ_border_color="@color/application_blue"
                        app:civ_border_width="@dimen/z"
                        app:civ_shadow="true"
                        app:civ_shadow_color="@color/application_blue_variant"
                        app:civ_shadow_radius="@dimen/button_radius"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tb"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom">

                    <ImageButton
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginTop="@dimen/img_marg"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/back_button"
                        android:onClick="onBack"
                        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                        android:visibility="invisible"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/namepos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/t"
                        android:textColor="@color/white"
                        android:visibility="invisible" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/chat_toolbar_profile_pic"
                        android:layout_width="@dimen/tb_prof"
                        android:layout_height="@dimen/tb_prof"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/tb_prof_marg"
                        android:src="@drawable/avatar_image_placeholder"
                        android:visibility="invisible"
                        app:civ_border_color="@color/application_blue"
                        app:civ_border_width="@dimen/img_bord"
                        app:civ_shadow="true"
                        app:civ_shadow_color="@color/application_blue_variant"
                        app:civ_shadow_radius="@dimen/z" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:id="@+id/chat_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:fillViewport="true"
                android:nestedScrollingEnabled="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chat"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/z"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="@dimen/rv_bot_marg"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:stackFromEnd="true" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:id="@+id/relativechat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_height"
        android:layout_marginHorizontal="@dimen/rc_marg"
        android:layout_marginBottom="@dimen/rc_marg"
        android:layout_marginTop="@dimen/img_marg"
        app:layout_constraintTop_toBottomOf="@id/chat_coordinator_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_border"
            android:backgroundTint="#C7EFF4F4"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:paddingStart="@dimen/search_start_padding"
            android:paddingEnd="@dimen/search_end_padding"
            android:textAlignment="textStart"
            android:textColorHint="#6E6E6E"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:onClick="onSend"
            android:layout_marginEnd="@dimen/sign_up_margin"
            android:src="@drawable/ic_baseline_brightness_1_24"
            app:tint="@color/grey"
            android:backgroundTint="@color/transparent"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>